# PhysicsEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Dependencies/include/glad/: glad.h
Dependencies/include/src/: glad.c
Src/: force_generator.h  matrix.h  quaternion.cpp  quaternion.h  rigid_body.cpp  rigid_body.h  system_state.h  utilities.h
include/: constant_rotation_constraint.h  constant_speed_motor.h  constraint.h  euler_ode_solver.h  fixed_position_constraint.h  fixed_rotation_constraint.h  force_generator.h  gauss_seidel_sle_solver.h  gaussian_elimination_sle_solver.h  generic_rigid_body_system.h  gravity_force_generator.h  line_constraint.h  link_constraint.h  matrix.h  nsv_ode_solver.h  ode_solver.h  optimized_nsv_rigid_body_system.h  rigid_body.h  rigid_body_system.h  rk4_ode_solver.h  rolling_constraint.h  rotation_friction_constraint.h  scs.h  simple_gear_constraint.h  sle_solver.h  sparse_matrix.h  spring.h  static_force_generator.h  system_state.h  utilities.h
src/: constant_rotation_constraint.cpp  constraint.cpp  fixed_position_constraint.cpp  fixed_rotation_constraint.cpp  line_constraint.cpp  link_constraint.cpp  optimized_nsv_rigid_body_system.cpp  rigid_body.cpp  rigid_body_system.cpp  rolling_constraint.cpp  simple_gear_constraint.cpp  spring.cpp  utilities.cpp
test/: utilities.h
